<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="publication"
            type="org.readium.r2.shared.publication.Publication" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/coverImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@{@string/publication_image_description(publication.metadata.title)}" />

        <TextView
            android:id="@+id/opdsTitleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{publication.metadata.title}"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/opdsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{publication.metadata.description}" />

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opds_detail_download_button" />
    </LinearLayout>

</layout>